wordpress.org/public_html/wp-content/themes/pub/wporg-breathe-2024/style.css
/* ... */
.widget_wporg_handbook_pages h1 {
	font-size: 1.6em;
	font-weight: bold;
	margin-bottom: 0.6em;
}

.menu-table-of-contents-container ul {
	margin-left: 0;
	padding-left: 0;
	list-style: none;
}

#secondary .menu-table-of-contents-container ul li {
	padding: 0;
	position: relative;
}

#secondary .menu-table-of-contents-container ul ul {
	margin-left: var(--wp--style--block-gap);
}

.menu-table-of-contents-container ul li .expandable {
	display: flex;
	flex-direction: row-reverse;
	align-items: stretch;
	position: relative;
}

.menu-table-of-contents-container ul li .dashicons {
	position: absolute;
	right: 0;
	cursor: pointer;
	padding: 8px 4px;
	display: inline-block;
	width: auto;
	height: 100%;
	background-color: #fafafa;
	border: 0;
	border-left: none;
	color: var(--wp--preset--color--charcoal-1);
	background: none;
	font-size: var(--wp--preset--font-size--small);
	border-radius: 0;
	box-shadow: none;
	-webkit-appearance: none;
}

.menu-table-of-contents-container ul li.open > div > .dashicons {
	transform: rotate(180deg);
	border: none;
}

.menu-table-of-contents-container ul a {
	display: block;
	width: 100%;
	padding: 8px 0;
	text-decoration: none;
	font-size: var(--wp--preset--font-size--small);
}

.menu-table-of-contents-container ul a:focus {
	text-decoration: underline;
}

.menu-table-of-contents-container ul li.menu-item-has-children > .expandable > a {
	padding-right: 32px;
}

.menu-table-of-contents-container ul a.active,
.menu-table-of-contents-container .current-menu-item > a {
	background-color: #fff;
	font-weight: bold;
}

.menu-table-of-contents-container ul.default-open {
	display: block !important;
}

.menu-table-of-contents-container .current-menu-item ul,
.menu-table-of-contents-container .current-menu-ancestor ul {
	display: block;
}

.menu-table-of-contents-container .children {
	overflow: hidden;
	display: none;
}

/* New handbook design */
.post-type-archive-handbook #page,
.single-handbook #page {
	max-width: 100%;
	padding: 0;
}

.post-type-archive-handbook #main,
.single-handbook #main {
	padding-bottom: var(--wp--preset--spacing--edge-space);
}

.post-type-archive-handbook #main:has(#secondary),
.single-handbook #main:has(#secondary) {
	display: grid;
	grid-template-columns: 25% auto;
	grid-template-rows: auto;
	column-gap: 60px;
	padding-top: var(--wp--preset--spacing--40);
}

.post-type-archive-handbook #main:has(#secondary):has(.handbook-breadcrumbs),
.single-handbook #main:has(#secondary):has(.handbook-breadcrumbs) {
	grid-template-rows: 40px auto;
}

@media (max-width: 876px) {
	post-type-archive-handbook #main:has(#secondary),
	.single-handbook #main:has(#secondary) {
		grid-template-columns: auto;
		column-gap: unset;
	}
}

.post-type-archive-handbook #primary,
.single-handbook #primary {
	width: 100%;
}

.post-type-archive-handbook #main:before,
.post-type-archive-handbook #main:after,
.single-handbook #main:before,
.single-handbook #main:after {
	display: none;
}

.post-type-archive-handbook header,
.single-handbook header {
	margin: 0;
}

.post-type-archive-handbook #secondary,
.single-handbook #secondary {
	clear: left;
	margin: 0;
}

.post-type-archive-handbook #primary,
.single-handbook #primary {
	position: relative;
	padding: unset;
	grid-column-start: 2;
}

.rtl.post-type-archive-handbook #primary,
.rtl.single-handbook #primary {
	padding-left: 0;
	padding-right: 4rem;
}

.post-type-archive-handbook .widget_wporg_handbook_pages,
.single-handbook .widget_wporg_handbook_pages {
	background-color: transparent;
}

.post-type-archive-handbook nav.o2-post-actions,
.single-handbook nav.o2-post-actions {
	position: absolute;
	top: -36px;
	inset-inline-end: 0;
}

@media (max-width: 550px) {
	nav.o2-post-actions ul {
		left: initial;
	}

	.rtl nav.o2-post-actions ul {
		left: 0;
		right: initial;
	}

	.post-type-archive-handbook nav.o2-post-actions,
	.single-handbook nav.o2-post-actions {
		top: -6px;
	}

	.single-handbook .o2-post {
		position: relative;
	}
}

.post-type-archive-handbook .make-welcome,
.single-handbook .make-welcome {
	margin: 0 !important;
}

.notice {
	background: #fff;
	border-left: 4px solid #fff;
	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
	margin: 1em 0;
	padding: 1px 12px;
}
.notice p {
	font-size: 14px;
	margin: 0.5em 0 !important;
	padding: 2px;
}
.notice.notice-alt {
	box-shadow: none;
}
.notice.notice-large {
	padding: 10px 20px;
}
.notice.notice-success {
	border-left-color: #46b450;
}
.notice.notice-success.notice-alt {
	background-color: #ecf7ed;
}
.notice.notice-warning {
	border-left-color: #ffb900;
}
.notice.notice-warning.notice-alt {
	background-color: #fff8e5;
}
.notice.notice-error {
	border-left-color: #dc3232;
}
.notice.notice-error.notice-alt {
	background-color: #fbeaea;
}
.notice.notice-info {
	border-left-color: #00a0d2;
}
.notice.notice-info.notice-alt {
	background-color: #e5f5fa;
}

@media (max-width: 600px) {
	.navigation .previous,
	.navigation .nav-older,
	.navigation p.nav-newer {
		float: none;
		width: 100%;
	}
	.navigation .nav-older a {
		border-right: 0;
	}
}

